Add magit forge

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ backups
 bookmarks
 elpa
 eshell
+forge-database.sqlite
 mspyls
-projectile.cache
 projectile-bookmarks.eld
 projectile.cache
 recentf
